--- a/turnos.html
+++ b/turnos.html
@@ -113,7 +113,6 @@
     </style>
 </head>
 <body>
-<body>
     <div class="container">
         <h1>Turnos - Calendario Interactivo</h1>
         
@@ -259,6 +258,14 @@
             }
         }
 
+        function mostrarCalendarioSemanal() {
+            const semanaSeleccionada = document.getElementById('semana').value;
+            if (!semanaSeleccionada) return;
+
+            generarCalendario(semanaSeleccionada);
+            cargarTurnosAsignados(semanaSeleccionada);
+        }
+
         function generarCalendario(semana) {
             const calendario = document.getElementById('calendario');
             calendario.innerHTML = '';
@@ -287,6 +294,21 @@
             });
             
             actualizarCalendario();
+        }
+
+        function getDateOfISOWeek(week, year) {
+            const simple = new Date(year, 0, 1 + (week - 1) * 7);
+            const dayOfWeek = simple.getDay();
+            const ISOweekStart = simple;
+            if (dayOfWeek <= 4)
+                ISOweekStart.setDate(simple.getDate() - simple.getDay() + 1);
+            else
+                ISOweekStart.setDate(simple.getDate() + 8 - simple.getDay());
+            return ISOweekStart;
+        }
+
+        function esFestivo(fecha) {
+            return festivosNacionales[fecha] || festivosMadrid[fecha] || festivosManuales[fecha];
         }
 
         function actualizarCalendario() {
