--- a/calendario-consultas.html
+++ b/calendario-consultas.html
@@ -148,6 +148,18 @@
             padding: 8px;
             box-sizing: border-box;
         }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        .form-group input, .form-group select {
+            width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
+        }
     </style>
 </head>
 <body>
@@ -283,17 +295,6 @@
                 `;
                 calendarWeek.appendChild(dayElement);
             });
-        }
-
-        function getDateOfISOWeek(week, year) {
-            const simple = new Date(year, 0, 1 + (week - 1) * 7);
-            const dayOfWeek = simple.getDay();
-            const ISOweekStart = simple;
-            if (dayOfWeek <= 4)
-                ISOweekStart.setDate(simple.getDate() - simple.getDay() + 1);
-            else
-                ISOweekStart.setDate(simple.getDate() + 8 - simple.getDay());
-            return ISOweekStart;
         }
 
         function cargarConsultas() {
@@ -502,6 +503,7 @@
             const currentWeek = getWeekNumber(currentDate);
             semanaInput.value = `${currentDate.getFullYear()}-W${currentWeek.toString().padStart(2, '0')}`;
             mostrarCalendarioSemanal();
+            cargarConsultas(); // Cargar consultas al iniciar la página
         };
 
         function getWeekNumber(d) {
