--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendario Interactivo - Selección de Disponibilidad</title>
+    <title>Plantilla de médicos - Preferencias</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -207,11 +207,10 @@
         <button class="btn" onclick="guardarCambios()">Guardar cambios</button>
 
         <nav>
-            <a href="index.html">Volver al Inicio</a>
+            <a href="festivos.html">Calendario de Festivos</a>
             <a href="subespecialidades.html">Subespecialidades</a>
             <a href="calendario-consultas.html">Calendario de Consultas</a>
-            <a href="festivos.html">Calendario de Festivos</a>
-            <a href="turnos.html">Turnos</a>
+            <a href="turnos.html">Calendario de Turnos</a>
         </nav>
     </div>
 
