--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Calendario Interactivo - Selección de Disponibilidad</h2>
+        <h2>Plantilla de médicos - Preferencias</h2>
         
         <!-- Formulario de registro de médicos -->
         <div class="form-group">
