--- a/calendario-consultas.html
+++ b/calendario-consultas.html
@@ -243,7 +243,7 @@
         function generarCalendarioSemanal(semana) {
             calendarWeek.innerHTML = '';
             const [year, week] = semana.split('-W');
-            const fechaInicio = getDateOfISOWeek(week, year);
+            const fechaInicio = getDateOfISOWeek(parseInt(week), parseInt(year));
 
             const festivosNacionales = JSON.parse(localStorage.getItem('festivosNacionales')) || {};
             const festivosMadrid = JSON.parse(localStorage.getItem('festivosMadrid')) || {};
@@ -255,7 +255,7 @@
                 const fechaStr = fecha.toISOString().split('T')[0];
                 const dayElement = document.createElement('div');
                 dayElement.className = 'day';
-                
+        
                 let holidayInfo = '';
                 if (festivosNacionales[fechaStr] || festivosMadrid[fechaStr]) {
                     dayElement.classList.add('holiday');
@@ -272,15 +272,14 @@
                 calendarWeek.appendChild(dayElement);
             });
         }
-
         function getDateOfISOWeek(week, year) {
-            const simple = new Date(year, 0, 1 + (week - 1) * 7);
+                const simple = new Date(year, 0, 1 + (week - 1) * 7);
             const dayOfWeek = simple.getDay();
-            const ISOweekStart = simple;
+            const ISOweekStart = new Date(simple);
             if (dayOfWeek <= 4)
-                ISOweekStart.setDate(simple.getDate() - simple.getDay() + 1);
+        ISOweekStart.setDate(simple.getDate() - simple.getDay() + 1);
             else
-                ISOweekStart.setDate(simple.getDate() + 8 - simple.getDay());
+        ISOweekStart.setDate(simple.getDate() + 8 - simple.getDay());
             return ISOweekStart;
         }
 
