--- a/calendario-consultas.html
+++ b/calendario-consultas.html
@@ -267,19 +267,24 @@
 
                 dayElement.innerHTML = `
                     <div class="day-header">${dia}<br>${fecha.toLocaleDateString()}${holidayInfo}</div>
+                    <div class="day-content" data-fecha="${fechaStr}" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                `;
+                calendarWeek.appendChild(dayElement);
+            });
+        }
+
+                dayElement.innerHTML = `
+                    <div class="day-header">${dia}<br>${fecha.toLocaleDateString()}${holidayInfo}</div>
                     <div class="day-content" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
                 `;
                 calendarWeek.appendChild(dayElement);
             });
         }
         function getDateOfISOWeek(week, year) {
-                const simple = new Date(year, 0, 1 + (week - 1) * 7);
+            const simple = new Date(year, 0, 1 + (week - 1) * 7);
             const dayOfWeek = simple.getDay();
             const ISOweekStart = new Date(simple);
-            if (dayOfWeek <= 4)
-        ISOweekStart.setDate(simple.getDate() - simple.getDay() + 1);
-            else
-        ISOweekStart.setDate(simple.getDate() + 8 - simple.getDay());
+            ISOweekStart.setDate(simple.getDate() - dayOfWeek + 1);
             return ISOweekStart;
         }
 
