--- a/calendario-consultas.html
+++ b/calendario-consultas.html
@@ -20,7 +20,7 @@
             width: 100%;
             padding: 20px;
             background-color: white;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         h2 {
             text-align: center;
