--- a/calendario-consultas.html
+++ b/calendario-consultas.html
@@ -12,7 +12,7 @@
             padding: 20px;
         }
         .container {
-            max-width: 800px;
+            max-width: 1000px;
             margin: 0 auto;
             background-color: white;
             padding: 20px;
@@ -21,6 +21,7 @@
         }
         h1 {
             text-align: center;
+            color: #333;
         }
         .form-group {
             margin-bottom: 15px;
@@ -94,8 +95,22 @@
             line-height: 50px;
             margin-top: 20px;
         }
+        nav {
+            margin-top: 20px;
+            text-align: center;
+        }
+        nav a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: #4CAF50;
+        }
         .festivo {
             background-color: #ffcccb;
+        }
+        .eliminar-turno {
+            color: red;
+            cursor: pointer;
+            margin-left: 5px;
         }
     </style>
 </head>
