--- a/calendario-consultas.html
+++ b/calendario-consultas.html
@@ -155,31 +155,8 @@
     <script>
         let turnosCreados = [];
         let turnosAsignados = {};
-        let festivosNacionales = {
-            "2024-01-01": "Año Nuevo",
-            "2024-01-06": "Epifanía del Señor",
-            "2024-03-29": "Viernes Santo",
-            "2024-05-01": "Fiesta del Trabajo",
-            "2024-08-15": "Asunción de la Virgen",
-            "2024-10-12": "Fiesta Nacional de España",
-            "2024-11-01": "Todos los Santos",
-            "2024-12-06": "Día de la Constitución Española",
-            "2024-12-25": "Navidad"
-        };
-        let festivosMadrid = {
-            "2024-01-01": "Año Nuevo",
-            "2024-01-06": "Epifanía del Señor",
-            "2024-03-28": "Jueves Santo",
-            "2024-03-29": "Viernes Santo",
-            "2024-05-01": "Fiesta del Trabajo",
-            "2024-05-02": "Fiesta de la Comunidad de Madrid",
-            "2024-05-15": "San Isidro",
-            "2024-08-15": "Asunción de la Virgen",
-            "2024-10-12": "Fiesta Nacional de España",
-            "2024-11-01": "Todos los Santos",
-            "2024-12-06": "Día de la Constitución Española",
-            "2024-12-25": "Navidad"
-        };
+        let festivosNacionales = {};
+        let festivosMadrid = {};
         let festivosManuales = {};
 
         function generarOpcionesHoras() {
@@ -349,6 +326,12 @@
             });
         }
 
+        function cargarFestivos() {
+            festivosNacionales = JSON.parse(localStorage.getItem('festivosNacionales')) || {};
+            festivosMadrid = JSON.parse(localStorage.getItem('festivosMadrid')) || {};
+            festivosManuales = JSON.parse(localStorage.getItem('festivosManuales')) || {};
+        }
+
         function guardarTurnosAsignados() {
             const semanaSeleccionada = document.getElementById('semana').value;
             localStorage.setItem(`turnosAsignados_${semanaSeleccionada}`, JSON.stringify(turnosAsignados));
@@ -375,6 +358,7 @@
 
         window.onload = function() {
             generarOpcionesHoras();
+            cargarFestivos();
             const turnosCreadosGuardados = localStorage.getItem('turnosCreados');
             if (turnosCreadosGuardados) {
                 turnosCreados = JSON.parse(turnosCreadosGuardados);
